[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-security-utilities"
version = "1.0.0"
description = "A collection of security utilities for banking and financial applications."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]